--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -40,12 +40,9 @@
 }
 
 .header-title {
-    text-transform: uppercase;
-    font-family: var(--font-title);
-    font-size: 2.75em;
-    font-weight: 900;
+    width: 300px;
+    height: 200px;
     white-space: nowrap;
-    letter-spacing: 0em;
 }
 
 .nav-container {
