--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -40,9 +40,9 @@
 }
 
 .header-title {
-    width: 300px;
-    height: 200px;
-    white-space: nowrap;
+    width: 400px;
+    height: 300px;
+    visibility: visible;
 }
 
 .nav-container {
