--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,7 +18,10 @@
 .header-container {
     display: flex;
     align-items: baseline;
-    margin: 0px 0.5em;   
+    width: 100%;
+    float: left;
+    left: 0;
+    right: 0;
 }
 @media (max-width: 540px) {
     .header-container {
@@ -28,7 +31,7 @@
     .header-title {
         flex-wrap: wrap;
     }
-    
+
     #header-nav-first {
         margin-left: 0em;
     }
