--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,10 +18,7 @@
 .header-container {
     display: flex;
     align-items: baseline;
-    width: 100%;
-    float: left;
-    left: 0;
-    right: 0;
+    margin: 0px 0.5em;   
 }
 @media (max-width: 540px) {
     .header-container {
@@ -31,7 +28,7 @@
     .header-title {
         flex-wrap: wrap;
     }
-
+    
     #header-nav-first {
         margin-left: 0em;
     }
@@ -48,8 +45,8 @@
 }
 
 .header-title {
-    width: 800px;
-    height: 216px;
+    width: 700px;
+    height: 189px;
     white-space: nowrap;
     visibility: visible;
     align-items: center;
