--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -37,7 +37,7 @@ and (max-width: 428px)
     }
 
     .header-image {
-        width: 100%;
+        width: 414px;
     }
     
     #header-nav-first {
