--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -63,13 +63,15 @@ and (max-width: 428px)
     position: fixed;
     align-items: baseline;
     text-align: center;
-    margin: 0px 0em;   
+    margin-top: -10;
+    margin-bottom: 10;
+    padding-left: 5;
+    padding-right: 5;
     width: 100%;
     float: left;
     background-color: white;
-    text-decoration: rgb(255, 48,0);
-    left: 0;
-    right: 0;
+    margin-left: 0;
+    margin-right: 0;
     border: 0 0.0625em 0  solid var(--color-postcard);
     box-shadow: 0 0.0625rem 0em var(--color-postcard);
  
@@ -77,7 +79,8 @@ and (max-width: 428px)
 
 .header-menu-bar a {
     text-decoration: none;
-    color: inherit;
+    color: black;
+    background-color: rgb(255, 48,0);
 }
 
 .header-menu-bar div::selection,
