--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -63,14 +63,12 @@ and (max-width: 428px)
     position: fixed;
     align-items: baseline;
     text-align: center;
-    padding-top: -10;
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: 0;
-    margin-right: 0;
     width: 100%;
-    float: left;
     background-color: white;
+    float: left;
+    left: 0;
+    right: 0;
+    margin-top: -30em;
     border: 0 0.0625em 0  solid var(--color-postcard);
     box-shadow: 0 0.0625rem 0em var(--color-postcard);
  
@@ -78,8 +76,7 @@ and (max-width: 428px)
 
 .header-menu-bar a {
     text-decoration: none;
-    color: white;
-    background-color: rgb(255, 48,0);
+    color: black;
 }
 
 .header-menu-bar div::selection,
