--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+@import url('fonts.googleapis.com/earlyaccess/jejumyeongjo.css');
+
 
 :root{
   overflow-y: scroll;
