--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,6 +15,7 @@
 }
 
 /* Layout-Header */
+
 .header-container {
     display: flex;
     align-items: baseline;
@@ -27,12 +28,25 @@
     right:0;
 }
 
+.header-p {
+    width: 100%;
+    white-space: nowrap;
+    visibility: visible;
+    align-items: center;
+    align-content: center;
+    left: 0;
+    right: 0;
+    padding-top: 2.4em;
+    margin-top: 2.4em;
+    color: black;
+    font-size: 26pt;
+    text-align: left;
+    font-family: var(--font-jeju);
+}
+
+
+
 @media (max-width: 540px) 
-and (max-width: 480px) 
-and (max-width: 414px) 
-and (max-width: 375px) 
-and (max-width: 390px) 
-and (max-width: 428px) 
 
 {
     .header-container {
@@ -43,9 +57,6 @@ and (max-width: 428px)
         flex-wrap: wrap;
     }
 
-    .header-image {
-        width: 414px;
-    }
     
     #header-nav-first {
         margin-left: 0em;
@@ -108,35 +119,7 @@ and (max-width: 428px)
  
 }
 
-.header-p {
-    max-width: 100%;
-    white-space: nowrap;
-    visibility: visible;
-    align-items: center;
-    align-content: center;
-    left: 0;
-    right: 0;
-    padding-top: 2.4em;
-    margin-top: 2.4em;
-    color: black;
-    font-size: 26pt;
-    text-align: left;
-    font-family: 'Jeju Myeongjo', serif;
-}
 
-@media (max-width: 540px) {
-    .header-container {
-        flex-wrap: wrap;
-    }
-
-    .header-title {
-        flex-wrap: wrap;
-    }
-    
-    #header-nav-first {
-        margin-left: 0em;
-    }
-}
 
 .nav-container {
     display: flex;
