--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -1,4 +1,5 @@
 body {
+    font-family: var(--font-sans-serif);
     background-color: var(--color-bg);
     color: var(--color-font);
     caret-color: var(--color-font);
