--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -28,7 +28,24 @@
     right:0;
 }
 
-.header-p {
+.header-p1 {
+    display: flex;
+    position: relative;
+    width: 100%;
+    white-space: nowrap;
+    visibility: visible;
+    align-items: center;
+    align-content: center;
+    left: 0;
+    right: 0;
+    padding-top: 2.4em;
+    margin-top: 2.4em;
+    color: black;
+    font-size: 26pt;
+    text-align: left;
+}
+
+.header-p2 {
     display: flex;
     position: relative;
     width: 100%;
