--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -37,7 +37,7 @@
     align-content: center;
     left: 0;
     right: 0;
-    padding-top: 0em;
+    padding: 0.4em;
     margin-top: 0em;
     color: black;
     font-size: 26pt;
@@ -54,10 +54,61 @@
     align-content: center;
     left: 0;
     right: 0;
-    padding-top: 0em;
-    margin-top: 0em;
+    padding: 0.4em;
+    margin-top: -1em;
     color: black;
     font-size: 26pt;
+    text-align: left;
+    background-color: rgb(255, 48,0);
+}
+
+.header-p3 {
+    display: flex;
+    width: 100%;
+    white-space: nowrap;
+    visibility: visible;
+    align-items: center;
+    align-content: center;
+    left: 0;
+    right: 0;
+    padding: 0.4em;
+    margin-top: -1em;
+    color: black;
+    font-size: 26pt;
+    text-align: left;
+    background-color: rgb(255, 48,0);
+}
+
+.header-p4 {
+    display: flex;
+    width: 100%;
+    white-space: nowrap;
+    visibility: visible;
+    align-items: center;
+    align-content: center;
+    left: 0;
+    right: 0;
+    padding: 0.4em;
+    margin-top: -1em;
+    color: black;
+    font-size: 26pt;
+    text-align: left;
+    background-color: rgb(255, 48,0);
+}
+
+.header-p5 {
+    display: flex;
+    width: 100%;
+    white-space: nowrap;
+    visibility: visible;
+    align-items: center;
+    align-content: center;
+    left: 0;
+    right: 0;
+    padding: 0.4em;
+    margin-top: -1em;
+    color: black;
+    font-size: 14pt;
     text-align: left;
     background-color: rgb(255, 48,0);
 }
@@ -121,6 +172,57 @@
     text-align: left;
 }
 
+.header-p3 a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.header-p3 div::selection,
+.header-p3 a::selection {
+    background: transparent;
+}
+
+.header-p3 p {
+    text-decoration: none;
+    color: black;
+    font-size: 32pt;
+    text-align: left;
+}
+
+.header-p4 a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.header-p4 div::selection,
+.header-p4 a::selection {
+    background: transparent;
+}
+
+.header-p4 p {
+    text-decoration: none;
+    color: black;
+    font-size: 32pt;
+    text-align: left;
+}
+
+.header-p5 a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.header-p5 div::selection,
+.header-p5 a::selection {
+    background: transparent;
+}
+
+.header-p5 p {
+    text-decoration: none;
+    color: black;
+    font-size: 32pt;
+    text-align: left;
+}
+
 .header-menu-bar {
     display: flex;
     position: fixed;
@@ -131,7 +233,7 @@
     float: left;
     left: 0;
     right: 0;
-    margin-top: -2.4em;
+    margin-top: -1.9em;
     padding-top: 0.02em;
     border: 0 0.0625em 0  solid var(--color-postcard);
     box-shadow: 0 0.0625rem 0em var(--color-postcard);
