--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -29,9 +29,8 @@
 }
 
 .header-p1 {
-    Display: flex;
+    display: flex;
     width: 100%;
-    white-space: nowrap;
     visibility: visible;
     align-items: center;
     align-content: center;
@@ -48,14 +47,13 @@
 .header-p2 {
     display: flex;
     width: 100%;
-    white-space: nowrap;
     visibility: visible;
     align-items: center;
     align-content: center;
     left: 0;
     right: 0;
     padding: 0.4em;
-    margin-top: -1em;
+    margin-top: -6em;
     color: black;
     font-size: 26pt;
     text-align: left;
@@ -65,14 +63,13 @@
 .header-p3 {
     display: flex;
     width: 100%;
-    white-space: nowrap;
     visibility: visible;
     align-items: center;
     align-content: center;
     left: 0;
     right: 0;
     padding: 0.4em;
-    margin-top: -1em;
+    margin-top: -6em;
     color: black;
     font-size: 26pt;
     text-align: left;
@@ -82,7 +79,6 @@
 .header-p4 {
     display: flex;
     width: 100%;
-    white-space: nowrap;
     visibility: visible;
     align-items: center;
     align-content: center;
@@ -106,7 +102,7 @@
     left: 0;
     right: 0;
     padding: 0.4em;
-    margin-top: -1em;
+    margin-top: -6em;
     color: black;
     font-size: 14pt;
     text-align: left;
@@ -126,6 +122,15 @@
         flex-wrap: wrap;
     }
     .header-p2 {
+        flex-wrap: wrap;
+    }
+    .header-p3 {
+        flex-wrap: wrap;
+    }
+    .header-p4 {
+        flex-wrap: wrap;
+    }
+    .header-p5 {
         flex-wrap: wrap;
     }
     .header-title {
@@ -153,7 +158,7 @@
     color: black;
     font-size: 26pt;
     text-align: left;
-    margin-top: -1em;
+    margin-top: -6em;
 }
 
 .header-p1 a {
@@ -188,7 +193,7 @@
     color: black;
     font-size: 26pt;
     text-align: left;
-    margin-top: -1em;
+    margin-top: -6em;
 }
 
 .header-p4 a {
@@ -206,7 +211,7 @@
     color: black;
     font-size: 26pt;
     text-align: left;
-    margin-top: -1em;
+    margin-top: -6em;
 }
 
 .header-p5 a {
@@ -224,7 +229,7 @@
     color: black;
     font-size: 14pt;
     text-align: left;
-    margin-top: -1em;
+    margin-top: -6em;
 }
 
 .header-menu-bar {
