--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -36,6 +36,7 @@
     right: 0;
     padding: 0.4em;
     margin-top: 2em;
+    margin-right: 56px;
     color: black;
     font-size: 26pt;
     text-align: left;
@@ -50,6 +51,7 @@
     right: 0;
     padding: 0.4em;
     margin-top: -4em;
+    margin-right: 56px;
     color: black;
     font-size: 26pt;
     text-align: left;
@@ -64,6 +66,7 @@
     right: 0;
     padding: 0.4em;
     margin-top: -5em;
+    margin-right: 56px;
     color: black;
     font-size: 26pt;
     text-align: left;
@@ -78,6 +81,7 @@
     right: 0;
     padding: 0.4em;
     margin-top: -6em;
+    margin-right: 56px;
     color: black;
     font-size: 26pt;
     text-align: left;
@@ -92,6 +96,7 @@
     right: 0;
     padding: 0.4em;
     margin-top: -7em;
+    margin-right: 28px;
     color: black;
     font-size: 14pt;
     text-align: left;
@@ -236,7 +241,7 @@
     float: left;
     left: 0;
     right: 0;
-    margin-top: -3.2em;
+    margin-top: -4.5em;
     padding-top: 0.02em;
     border: 0 0.0625em 0  solid var(--color-postcard);
     box-shadow: 0 0.0625rem 0em var(--color-postcard);
