--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -34,8 +34,8 @@
     width: 100%;
     left: 0;
     right: 0;
-    padding: 0.4em;
-    margin-top: 0em;
+    padding-left: 0.4em;
+    margin-top: 4em;
     margin-right: -56px;
     padding-right: -56px;
     color: black;
@@ -50,7 +50,7 @@
     width: 100%;
     left: 0;
     right: 0;
-    padding: 0.4em;
+    padding-left: 0.4em;
     margin-top: -4em;
     padding-top: -4em;
     margin-right: -56px;
@@ -67,7 +67,7 @@
     width: 100%;
     left: 0;
     right: 0;
-    padding: 0.4em;
+    padding-left: 0.4em;
     margin-top: -4em;
     padding-top: -4em;
     margin-right: -56px;
@@ -84,7 +84,9 @@
     width: 100%;
     left: 0;
     right: 0;
-    padding: 0.4em;
+    padding-left: 0.4em;
+    margin-top: -4em;
+    padding-top: -4em;
     margin-right: -28px;
     padding-right: -28px;
     color: black;
@@ -99,7 +101,9 @@
     width: 100%;
     left: 0;
     right: 0;
-    padding: 0.4em;
+    padding-left: 0.4em;
+    margin-top: -4em;
+    padding-top: -4em;
     margin-right: -56px;
     padding-right: -56px;
     color: black;
