--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -145,6 +145,18 @@
         margin-left: 0em;
     }
 }
+.headr-p-box{
+    border: 0.0625em solid var(--color-postcard);
+    border-radius: 0.3em;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    left: 0;
+    right: 0;
+    padding-left: 0.4em;
+    margin-top: -4em;
+    background-color: rgb(255, 48,0);
+}
 
 .header-p2 a {
     text-decoration: none;
@@ -250,7 +262,7 @@
     float: left;
     left: 0;
     right: 0;
-    margin-top: -4.5em;
+    margin-top: -8em;
     padding-top: 0.02em;
     border: 0 0.0625em 0  solid var(--color-postcard);
     box-shadow: 0 0.0625rem 0em var(--color-postcard);
