--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -154,7 +154,8 @@
     left: 0;
     right: 0;
     padding-left: 0.4em;
-    margin-top: -4em;
+    margin-top: 0em;
+    margin-right: -56px;
     background-color: rgb(255, 48,0);
 }
 
@@ -262,7 +263,7 @@
     float: left;
     left: 0;
     right: 0;
-    margin-top: 0em;
+    margin-top: -4.5em;
     padding-top: 0.02em;
     border: 0 0.0625em 0  solid var(--color-postcard);
     box-shadow: 0 0.0625rem 0em var(--color-postcard);
