--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -34,13 +34,12 @@
     width: 100%;
     left: 0;
     right: 0;
-    padding-left: 0.4em;
     margin-top: 0em;
-    margin-right: -112px;
-    padding-right: -112px;
+    margin-right: -56px;
+    padding-right: -56px;
     color: black;
     font-size: 26pt;
-    text-align: left;
+    text-align: center;
     background-color: rgb(255, 48,0);
 }
 
@@ -52,12 +51,11 @@
     right: 0;
     padding-left: 0.4em;
     margin-top: -4em;
-    padding-top: -4em;
-    margin-right: -112px;
-    padding-right: -112px;
+    margin-right: -56px;
+    padding-right: -56px;
     color: black;
     font-size: 26pt;
-    text-align: left;
+    text-align: center;
     background-color: rgb(255, 48,0);
 }
 
@@ -69,12 +67,11 @@
     right: 0;
     padding-left: 0.4em;
     margin-top: -4em;
-    padding-top: -4em;
-    margin-right: -112px;
-    padding-right: -112px;
+    margin-right: -56px;
+    padding-right: -56px;
     color: black;
     font-size: 26pt;
-    text-align: left;
+    text-align: center;
     background-color: rgb(255, 48,0);
 }
 
@@ -86,12 +83,11 @@
     right: 0;
     padding-left: 0.4em;
     margin-top: -4em;
-    padding-top: -4em;
-    margin-right: -112px;
-    padding-right: -112px;
+    margin-right: -56px;
+    padding-right: -56px;
     color: black;
     font-size: 26pt;
-    text-align: left;
+    text-align: center;
     background-color: rgb(255, 48,0);
 }
 
@@ -103,12 +99,11 @@
     right: 0;
     padding-left: 0.4em;
     margin-top: -4em;
-    padding-top: -4em;
-    margin-right: -56px;
-    padding-right: -56px;
+    margin-right: -28px;
+    padding-right: -28px;
     color: black;
-    font-size: 14pt;
-    text-align: left;
+    font-size: 26pt;
+    text-align: center;
     background-color: rgb(255, 48,0);
 }
 
@@ -263,7 +258,7 @@
     float: left;
     left: 0;
     right: 0;
-    margin-top: -4.5em;
+    margin-top: -1em;
     padding-top: 0.02em;
     border: 0 0.0625em 0  solid var(--color-postcard);
     box-shadow: 0 0.0625rem 0em var(--color-postcard);
