--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,80 +31,46 @@
 .header-p1 {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    left: 0;
-    right: 0;
     margin-top: 0em;
-    margin-right: -56px;
-    padding-right: -56px;
     color: black;
     font-size: 26pt;
     text-align: center;
-    background-color: rgb(255, 48,0);
 }
 
 .header-p2 {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    left: 0;
-    right: 0;
-    padding-left: 0.4em;
     margin-top: -4em;
-    margin-right: -56px;
-    padding-right: -56px;
     color: black;
     font-size: 26pt;
     text-align: center;
-    background-color: rgb(255, 48,0);
 }
 
 .header-p3 {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    left: 0;
-    right: 0;
-    padding-left: 0.4em;
     margin-top: -4em;
-    margin-right: -56px;
-    padding-right: -56px;
     color: black;
     font-size: 26pt;
     text-align: center;
-    background-color: rgb(255, 48,0);
 }
 
 .header-p4 {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    left: 0;
-    right: 0;
-    padding-left: 0.4em;
     margin-top: -4em;
-    margin-right: -56px;
-    padding-right: -56px;
     color: black;
     font-size: 26pt;
     text-align: center;
-    background-color: rgb(255, 48,0);
 }
 
 .header-p5 {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    left: 0;
-    right: 0;
-    padding-left: 0.4em;
     margin-top: -4em;
-    margin-right: -28px;
-    padding-right: -28px;
     color: black;
-    font-size: 26pt;
+    font-size: 12pt;
     text-align: center;
-    background-color: rgb(255, 48,0);
 }
 
 
@@ -141,14 +107,11 @@
     }
 }
 .headr-p-box{
-    border: 0em solid var(--color-postcard);
+    border: 0.0625em solid var(--color-bg);
     border-radius: 0.3em;
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-    left: 0;
-    right: 0;
-    padding-left: 0.4em;
+    width: 578px;
+    padding-top: 136px;
     margin-top: 0em;
     margin-right: -56px;
     background-color: rgb(255, 48,0);
