--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,8 +31,11 @@
 .header-p1 {
     display: flex;
     justify-content: space-between;
-    margin-top: 0em;
+    margin-top: 80em;
+    padding-top: 80px;
+    width: 581px;
     color: black;
+    background-color: rgb(255, 48,0);
     font-size: 26pt;
     text-align: center;
 }
@@ -41,7 +44,9 @@
     display: flex;
     justify-content: space-between;
     margin-top: -4em;
+    width: 581px;
     color: black;
+    background-color: rgb(255, 48,0);
     font-size: 26pt;
     text-align: center;
 }
@@ -50,7 +55,9 @@
     display: flex;
     justify-content: space-between;
     margin-top: -4em;
+    width: 581px;
     color: black;
+    background-color: rgb(255, 48,0);
     font-size: 26pt;
     text-align: center;
 }
@@ -59,7 +66,9 @@
     display: flex;
     justify-content: space-between;
     margin-top: -4em;
+    width: 581px;
     color: black;
+    background-color: rgb(255, 48,0);
     font-size: 26pt;
     text-align: center;
 }
@@ -68,7 +77,9 @@
     display: flex;
     justify-content: space-between;
     margin-top: -4em;
+    width: 581px;
     color: black;
+    background-color: rgb(255, 48,0);
     font-size: 12pt;
     text-align: center;
 }
