--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -21,6 +21,7 @@
     align-items: baseline; 
     align-items: center;
     align-content: center;
+    padding-top: 56px;
     width: 100%;
     left:0;
     right:0;
