--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -22,7 +22,8 @@
     align-items: center;
     align-content: center;
     padding-top: 56px;
-    width: 100%;
+    max-width:100%; 
+    max-height:100%;
     left:0;
     right:0;
 }
