--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,205 +18,25 @@
 
 .header-container {
     display: flex;
-    align-items: baseline; 
     align-items: center;
     align-content: center;
     padding-top: 56px;
-    max-width: 100%;
     left:0;
     right:0;
 }
 
-.header-p1 {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 80em;
-    padding-top: 80px;
-    width: 581px;
-    color: black;
-    background-color: rgb(255, 48,0);
-    font-size: 26pt;
-    text-align: center;
-}
 
-.header-p2 {
-    display: flex;
-    justify-content: space-between;
-    margin-top: -4em;
-    width: 581px;
-    color: black;
-    background-color: rgb(255, 48,0);
-    font-size: 26pt;
-    text-align: center;
-}
-
-.header-p3 {
-    display: flex;
-    justify-content: space-between;
-    margin-top: -4em;
-    width: 581px;
-    color: black;
-    background-color: rgb(255, 48,0);
-    font-size: 26pt;
-    text-align: center;
-}
-
-.header-p4 {
-    display: flex;
-    justify-content: space-between;
-    margin-top: -4em;
-    width: 581px;
-    color: black;
-    background-color: rgb(255, 48,0);
-    font-size: 26pt;
-    text-align: center;
-}
-
-.header-p5 {
-    display: flex;
-    justify-content: space-between;
-    margin-top: -4em;
-    width: 581px;
-    color: black;
-    background-color: rgb(255, 48,0);
-    font-size: 12pt;
-    text-align: center;
-}
-
-
-
-@media (max-width: 540px) 
+@media (max-width: 100%) 
 
 {
-
-    .header-p1 {
-        flex-wrap: wrap;
-    }
-    .header-p2 {
-        flex-wrap: wrap;
-    }
-    .header-p3 {
-        flex-wrap: wrap;
-    }
-    .header-p4 {
-        flex-wrap: wrap;
-    }
-    .header-p5 {
-        flex-wrap: wrap;
-    }
-    .header-title {
-        flex-wrap: wrap;
-    }
-
-    
+    .header-container {
+        flex-wrap: wrap;}
     #header-nav-first {
         margin-left: 0em;
     }
 }
-.headr-p-box{
-    border: 0.0625em solid var(--color-bg);
-    border-radius: 0.3em;
-    display: flex;
-    width: 578px;
-    padding-top: 136px;
-    margin-top: 0em;
-    margin-right: -56px;
-    background-color: rgb(255, 48,0);
-}
 
-.header-p2 a {
-    text-decoration: none;
-    color: inherit;
-}
 
-.header-p2 div::selection,
-.header-p2 a::selection {
-    background: transparent;
-}
-
-.header-p2 p {
-    text-decoration: none;
-    color: black;
-    font-size: 26pt;
-    text-align: left;
-    margin-top: -1.2em;
-    width: 60%;
-}
-
-.header-p1 a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.header-p1 div::selection,
-.header-p1 a::selection {
-    background: transparent;
-}
-
-.header-p1 p {
-    text-decoration: none;
-    color: black;
-    font-size: 26pt;
-    text-align: left;
-    width: 60%;
-}
-
-.header-p3 a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.header-p3 div::selection,
-.header-p3 a::selection {
-    background: transparent;
-}
-
-.header-p3 p {
-    text-decoration: none;
-    color: black;
-    font-size: 26pt;
-    text-align: left;
-    margin-top: -1.2em;
-    width: 60%;
-}
-
-.header-p4 a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.header-p4 div::selection,
-.header-p4 a::selection {
-    background: transparent;
-}
-
-.header-p4 p {
-    text-decoration: none;
-    color: black;
-    font-size: 26pt;
-    text-align: left;
-    margin-top: -1.2em;
-    width: 60%;
-}
-
-.header-p5 a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.header-p5 div::selection,
-.header-p5 a::selection {
-    background: transparent;
-}
-
-.header-p5 p {
-    text-decoration: none;
-    color: black;
-    font-size: 14pt;
-    text-align: left;
-    margin-top: -1.2em;
-    width: 60%;
-}
 
 .header-menu-bar {
     display: flex;
@@ -248,16 +68,12 @@
 }
 
 .header-title {
-    width: 700px;
-    height: 189px;
     white-space: nowrap;
     visibility: visible;
     align-items: center;
     align-content: center;
  
 }
-
-
 
 .nav-container {
     display: flex;
