--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -23,14 +23,18 @@
     padding-top: 56px;
     left:0;
     right:0;
-    max-width: 100% !important;
-    height: auto !important;
+    width: 100% ;
 }
 
 
-@media (max-width: 100%) 
+@media (max-width: 540px) 
 
 {
+
+    .header-container {
+        flex-wrap: wrap;
+    }
+    
     #header-nav-first {
         margin-left: 0em;
     }
