--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -34,7 +34,7 @@
     .header-container {
         flex-wrap: wrap;
     }
-    
+
     #header-nav-first {
         margin-left: 0em;
     }
@@ -46,12 +46,13 @@
     align-items: baseline;
     text-align: center;
     width: 100%;
-    background-color: white;
+    background-color: rgb(232, 54, 22);
+    color: white;
     float: left;
     left: 0;
     right: 0;
     margin-top: -1em;
-    padding-top: 0.02em;
+    padding-top: 0.01em;
     border: 0 0.0625em 0  solid var(--color-postcard);
     box-shadow: 0 0.0625rem 0em var(--color-postcard);
  
@@ -59,7 +60,7 @@
 
 .header-menu-bar a {
     text-decoration: none;
-    color: black;
+    color: white;
     align-items: center;
     text-align: center;
 }
