--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -46,13 +46,13 @@
     align-items: baseline;
     text-align: center;
     width: 100%;
-    background-color: rgb(232, 54, 22);
-    color: white;
+    background-color: rgb(255, 166, 151);
+    color: rgb(96, 96, 96);
     float: left;
     left: 0;
     right: 0;
-    margin-top: -1em;
-    padding-top: 0.01em;
+    margin-top: 0em;
+    padding-top: 0em;
     border: 0 0.0625em 0  solid var(--color-postcard);
     box-shadow: 0 0.0625rem 0em var(--color-postcard);
  
@@ -60,7 +60,7 @@
 
 .header-menu-bar a {
     text-decoration: none;
-    color: white;
+    color: rgb(96, 96, 96);
     align-items: center;
     text-align: center;
 }
