--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -46,13 +46,14 @@
     align-items: baseline;
     text-align: center;
     width: 100%;
-    background-color: rgb(255, 166, 151);
+    background-color: rgb(255, 190, 179);
     color: rgb(96, 96, 96);
     float: left;
     left: 0;
     right: 0;
-    margin-top: 0em;
+    margin-top: -1em;
     padding-top: 0em;
+    height: 36px;
     border: 0 0.0625em 0  solid var(--color-postcard);
     box-shadow: 0 0.0625rem 0em var(--color-postcard);
  
