--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -20,10 +20,11 @@
     display: flex;
     align-items: center;
     align-content: center;
-    padding-top: 56px;
+    padding-top: 16px;
     left:0;
     right:0;
     width: 100% ;
+    background-color: rgb(25, 255, 25);
 }
 
 
