--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -17,7 +17,7 @@
 }
 
 body.light {
-  --color-bg: rgba(255, 255, 255, 0.9);
+  --color-bg: rgb(25, 27, 127);
   --color-font: rgba(0, 0, 0, 0.8);
   --color-postcard: rgba(0, 0, 0, 0.1);
 
