--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -131,13 +131,13 @@
 
 /* Postcard*/
 .post-card {
-    border: 0.0625em solid var(--color-postcard);
+    border: 0.1em solid var(--color-postcard);
     border-radius: 0.3em;
-    box-shadow: 0 0.0625em 0.25em var(--color-postcard);
     margin-top: 0.5em;
     margin-bottom: 1.5em;
     padding: 2em 1.5em;
     cursor: default;
+    background-color: white;
 }
 
 .post-card h1 {
