--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -154,6 +154,10 @@
 .post-card p {
     margin-bottom: 0em;
     margin-top: 0.75em;
+    background-color: white;
+    border-radius: 0.625em;
+    border: 0.0625em solid var(--color-font);
+    
 }
 .post-card small {
     font-size: 0.8125em;
@@ -172,6 +176,8 @@
 .post-header {
     text-align: center;
     background-color: white;
+    border-radius: 0.625em;
+    border: 0.0625em solid var(--color-font);
 }
 .post-header h1 {
     font-size: 3em;
@@ -185,13 +191,14 @@
     font-size: 0.8125em;
     margin-top: 0.8125em;
     background-color: white;
+    border-radius: 0.625em;
+    border: 0.0625em solid var(--color-font);
 }
 
 .search-box-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: white;
 }
 .search-box {
     margin: 2em auto;
@@ -215,7 +222,6 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    background-color: white;
 }
 
 .tag-archive-item {
