--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,6 +13,8 @@
     padding: auto;
     max-width: 45rem;
     background-color: white;
+    border-radius: 0.625em;
+    border: 0em solid var(--color-font);
 }
 
 .site-container_front {
@@ -27,11 +29,10 @@
     display: flex;
     align-items: center;
     align-content: center;
-    padding-top: 16px;
+    padding-top: 22px;
     left:0;
     right:0;
     width: 100% ;
-    background-color: rgb(25, 27, 127);
 }
 
 
@@ -135,6 +136,60 @@
     text-decoration: none;
     color: inherit;
 }
+.footer {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+	padding: 0;
+	color: black;
+	background-color: gray;
+    display: block;
+}
+
+.footerbtn{
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    border: none
+}
+
+.dropup {
+position: relative;
+display: inline-block;
+}
+.dropup-content {
+    display: none;
+    position: absolute;
+    bottom: 200px;
+    background-color: grey;
+    color: black;
+    min-width: 160px;
+    z-index: 1;
+  }  
+  
+.dropup-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+
+  /* Change color of dropup links on hover */
+.dropup-content a:hover {background-color: #ddd}
+
+/* Show the dropup menu on hover */
+.dropup:hover .dropup-content {
+  display: block;
+}
+
+/* Change the background color of the dropup button when the dropup content is shown */
+.dropup:hover .dropbtn {
+  background-color: rgb(202, 255, 204);
+}
 
 /* Postcard*/
 .post-card {
@@ -152,7 +207,6 @@
     margin-top: 0em;
     margin-bottom: 0em;
     letter-spacing: -0.025em;
-    background-color: white;
 }
 .post-card a {
     text-decoration: none;
@@ -161,7 +215,6 @@
 .post-card p {
     margin-bottom: 0em;
     margin-top: 0.75em;
-    background-color: white;
 
     
 }
@@ -181,24 +234,17 @@
 
 .post-header {
     text-align: center;
-    background-color: white;
-    border-radius: 0.625em;
-    border: 0.0625em solid var(--color-font);
 }
 .post-header h1 {
     font-size: 3em;
     letter-spacing: -0.025em;
     margin-top: 0.8125em;
     margin-bottom: 0em;
-    background-color: white;
     
 }
 .post-header p {
     font-size: 0.8125em;
-    margin-top: 0.8125em;
-    background-color: white;
-    border-radius: 0.625em;
-    border: 0.0625em solid var(--color-font);
+    margin-top: 0.8125em;;
 }
 
 .search-box-container {
