--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14,7 +14,8 @@
     max-width: 45rem;
     background-color: white;
     border-radius: 0.625em;
-    border: 0em solid var(--color-font);
+    border: 0.02em solid;
+    border-color: rgb(25, 27, 127);
 }
 
 .site-container_front {
