--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,12 +10,12 @@
 
 .site-container {
     margin: auto;
-    padding: auto;
     max-width: 45rem;
     background-color: white;
     border-radius: 0.625em;
     border: 0.02em solid;
     border-color: rgb(25, 27, 127);
+    padding: 2em 1.5em;
 }
 
 .site-container_front {
@@ -159,8 +159,7 @@
     padding: 16px;
     font-size: 16px;
     border: none;
-    width: 160px;
-    background-color: rgb(239, 239, 239);
+    background-color: transparent !important;
 }
 
 .dropup {
@@ -170,7 +169,7 @@ display: inline-block;
 .dropup-content {
     display: none;
     position: absolute;
-    bottom: 32px;
+    bottom: 52px;
     background-color: rgb(178, 178, 178);
     color: black;
     min-width: 160px;
