--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -166,17 +166,39 @@
 position: relative;
 display: inline-block;
 }
-.dropup-content {
+.dropup-content-1 {
     display: none;
     position: absolute;
-    bottom: 52px;
+    bottom: 47px;
+    background-color: rgb(178, 178, 178);
+    color: black;
+    min-width: 160px;
+    width: 160px;
+  }  
+
+.dropup-content-2 {
+    display: none;
+    position: absolute;
+    left: 135px;
+    bottom: 47px;
+    background-color: rgb(178, 178, 178);
+    color: black;
+    min-width: 160px;
+    width: 160px;
+  }  
+
+.dropup-content-3 {
+    display: none;
+    position: absolute;
+    left: 270px;
+    bottom: 47px;
     background-color: rgb(178, 178, 178);
     color: black;
     min-width: 160px;
     width: 160px;
   }  
   
-.dropup-content a {
+.dropup-content-1 .dropup-content-2 .dropup-content-3 a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
@@ -185,14 +207,15 @@ display: inline-block;
 
 
   /* Change color of dropup links on hover */
-.dropup-content a:hover {
+.dropup-content-1 .dropup-content-2 .dropup-content-3 a:hover {
     background-color: rgb(202, 255, 204);
 }
 
 /* Show the dropup menu on hover */
-.dropup:hover .dropup-content {
+.dropup-content-1 .dropup-content-2 .dropup-content-3 {
   display: block;
 }
+
 
 /* Change the background color of the dropup button when the dropup content is shown */
 .dropup:hover .dropbtn {
