--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -133,11 +133,12 @@
     font-size: 0.875em;
     margin-bottom: 40px;
     padding-bottom: 22px;
+    color: white;
 }
 
 .footer-gatsby {
     text-decoration: none;
-    color: inherit;
+    color: white;
 }
 .footer {
     position: fixed;
@@ -384,13 +385,15 @@ display: inline-block;
     list-style: none;
     padding: 0;
     font-size: 1.125em;
+    color: white;
 }
 .post-nav ::selection {
     background: transparent;
+    color: white;
 }
 .post-nav a {
     text-decoration: none;
-    color: inherit;
+    color: white;
     display: flex;
     align-items: baseline;
 }
@@ -401,9 +404,11 @@ display: inline-block;
 }
 .post-nav-prev {
     margin-left: 0.125rem;
+    color: white;
 }
 .post-nav-next {
     margin-right: 0.125rem;
+    color: white;
 }
 
 article .tag-container {
