--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -135,7 +135,7 @@
     display: block;
     writing-mode: vertical-rl;
     color: rgb(25, 27, 127);
-    top: 5%;
+    top: 20%;
     right:0;
     float:left;
     cursor: pointer;
@@ -148,6 +148,10 @@
     margin-bottom: 20px;
     color: black;
 
+}
+
+#aside-bar li ul a {
+ text-decoration: none;
 }
 
 /* Layout-Footer */
