--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -141,7 +141,7 @@
     right:0;
     float:left;
     cursor: pointer;
-    font-size: font-size: 0.875em;
+    font-size: 0.875em;
   }
 
 #aside-bar a {
