--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -129,6 +129,7 @@
 
 #aside-bar {
     background-color: transparent;
+    position:absolute;
     width: 31px;
     height: auto;
     display: block;
