--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -109,17 +109,18 @@
     list-style: none;
     display: flex;
     justify-content: flex-end;
-    padding: 0em;
+    padding-right: 0em;
     margin-right: 0.8em;
 }
 
 .header-nav li {
     margin-left: 1.5em;
+    padding-right: 0em;
 }
 
 .header-link li {
     margin-left: 1.5em;
-    padding: -0.8em;
+    padding-right: -0.8em;
 }
 
 .tog-checkbox {
